<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/_270sdp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/appPrimaryBlue"
        android:padding="@dimen/_8sdp"
        android:text="@string/enquiry_form"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/_18sdp"
        android:textStyle="bold" />


    <LinearLayout
        android:orientation="vertical"
        android:layout_margin="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/company_name"
            android:layout_width="match_parent"
            app:helperText="@string/required"
            app:helperTextTextColor="@color/red"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/enquiryCompany"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/contact_name"
            android:layout_width="match_parent"
            app:helperText="@string/required"
            app:helperTextTextColor="@color/red"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/enquiryContact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/contact_number"
            android:layout_width="match_parent"
            app:helperText="@string/required"
            app:counterEnabled="true"
            app:counterMaxLength="10"
            app:helperTextTextColor="@color/red"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/enquiryMobileNo"
                android:inputType="number"
                android:maxLength="10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/product_name"
            android:layout_width="match_parent"
            app:helperTextTextColor="@color/red"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/enquiryProduct"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/remarks"
            android:layout_width="match_parent"
            app:helperTextTextColor="@color/red"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/enquiryRemarks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <com.google.android.material.textfield.TextInputLayout
                android:orientation="horizontal"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/contact_date"
                android:layout_width="0dp"
                android:layout_weight="1"
                app:helperTextTextColor="@color/red"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/enquiryDate"
                    android:inputType="date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/changeDateBtn"
                android:padding="@dimen/_5sdp"
                android:src="@drawable/ic_event"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_gravity="center"
                android:layout_weight="0.25"
                android:layout_width="0dp"
                android:layout_height="@dimen/_45sdp"/>

        </LinearLayout>

        <Button
            android:id="@+id/btnSubmitEnquiry"
            android:text="@string/submit"
            android:backgroundTint="@color/appThirdYellow"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>