<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/_7sdp"
    app:cardUseCompatPadding="true"
    app:cardElevation="@dimen/_7sdp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <LinearLayout
        android:layout_marginBottom="@dimen/_10sdp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:padding="@dimen/_5sdp"
            android:orientation="vertical"
            android:background="@color/appPrimaryBlue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:padding="@dimen/_5sdp"
                android:background="@drawable/circle_yellow_button"
                android:id="@+id/btnCloseDialog"
                android:layout_gravity="right"
                android:src="@drawable/ic_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


            <LinearLayout
                android:padding="@dimen/_5sdp"
                android:background="@color/appPrimaryBlue"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TextView
                    android:text="@string/awsPlans"
                    android:id="@+id/awsPlanName"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_18sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </LinearLayout>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/appSecondaryBlue"
            android:padding="5dp"
            android:text="@string/pricing"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_marginTop="10dp"
            android:background="@color/appSecondaryBlue"
            android:layout_width="match_parent"
            android:layout_height="2dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textStyle="bold"
                android:text="@string/particulars"
                android:textColor="@color/black"/>

            <TextView
                android:layout_weight="0.70"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textStyle="bold"
                android:text="@string/quarterly"
                android:textAlignment="textEnd"
                android:textColor="@color/black"/>

            <TextView
                android:layout_weight="0.70"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textStyle="bold"
                android:text="@string/halfYearly"
                android:textAlignment="textEnd"
                android:textColor="@color/black"/>

            <TextView
                android:layout_weight="0.80"
                android:layout_width="0dp"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/yearly"
                android:textAlignment="textEnd"
                android:textColor="@color/black"/>


        </LinearLayout>

        <LinearLayout
            android:background="@color/appSecondaryBlue"
            android:layout_width="match_parent"
            android:layout_height="2dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/taxableValue"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/awsQuarterlyTaxableValue"
                android:layout_weight="0.70"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="2250"
                android:textAlignment="textEnd"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/awsHalfYearlyTaxableValue"
                android:layout_weight="0.70"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="4500"
                android:textAlignment="textEnd"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/awsYearlyTaxableValue"
                android:layout_weight="0.80"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="9000"
                android:textAlignment="textEnd"
                android:textColor="@color/black"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/awsGSTPercentage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                android:text="@string/gst"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/awsQuarterlyGSTValue"
                android:layout_weight="0.70"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="405"
                android:textAlignment="textEnd"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/awsHalfYearlyGSTValue"
                android:layout_weight="0.70"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="810"
                android:textAlignment="textEnd"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/awsYearlyGSTValue"
                android:layout_weight="0.80"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="1620"
                android:textAlignment="textEnd"
                android:textColor="@color/black"/>


        </LinearLayout>

        <LinearLayout
            android:background="@color/appSecondaryBlue"
            android:layout_width="match_parent"
            android:layout_height="2dp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textStyle="bold"
                android:text="@string/total"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/awsQuarterlyTotalValue"
                android:layout_weight="0.70"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textStyle="bold"
                android:text="2665"
                android:textAlignment="textEnd"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/awsHalfYearlyTotalValue"
                android:layout_weight="0.70"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textStyle="bold"
                android:text="5310"
                android:textAlignment="textEnd"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/awsYearlyTotalValue"
                android:layout_weight="0.80"
                android:layout_width="0dp"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="10620"
                android:textAlignment="textEnd"
                android:textColor="@color/black"/>

        </LinearLayout>

        <LinearLayout
            android:background="@color/appSecondaryBlue"
            android:layout_width="match_parent"
            android:layout_height="2dp"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>